tests/snapshots/run_wpt_conformance__onnx_gather_float32_5D_tensor_and_0D_scalar_indices_options_axis_4.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gather.https.any.js",
    "gather float32 5D tensor and 0D scalar indices options.axis=4",
    "onnx",
    "PASS",
)
